--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <title>Emily Chadwick</title>
@@ -13,8 +14,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- Custom styles for this template  sgo here -->
-    <link rel="stylesheet" href="css/styles.css">
 
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Handlee|Roboto:300" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -22,40 +23,39 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
   </head>
 
   <body data-spy="scroll" data-target=".navbar">
     <!--navbar starts here-->
-
-      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <div class="emilyChadwick navbar-brand">
-              <a href="#">Home</a>
-            </div> <!--end emilyChadwick-->
-          </div> <!--end navbar-header-->
-          <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-              <!--<li><a href="#index">Home</a></li>-->
-              <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#faq">FAQs</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div> <!--end nav collapse-->
-        </div> <!--end container-fluid-->
-      </nav> --> <!--end nav-->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <div class="emilyChadwick navbar-brand">
+            <a href="#">Home</a>
+          </div> <!--end emilyChadwick-->
+        </div> <!--end navbar-header-->
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <!--<li><a href="#index">Home</a></li>-->
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#faq">FAQs</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div> <!--end nav collapse-->
+      </div> <!--end container-fluid-->
+    </nav> <!--end nav-->
 
     <!--index-->
 
     <div class="container-fluid" id="index">
-
       <div id="carousel-index" class="carousel slide" data-ride="carousel">
 
         <!--Indicators-->
@@ -70,20 +70,20 @@
           <div class="item active">
             <img src="img/green-field.jpg" alt="field">
             <div class="carousel-caption">
-            </div>
-          </div>
+            </div> <!--end carousel-caption"-->
+          </div> <!--end item active-->
 
           <div class="item">
             <img src="img/sunset-bridge.jpg" alt="bridge">
             <div class="carousel-caption">
-            </div>
-          </div>
+            </div> <!--end carousel caption-->
+          </div> <!--end item active-->
           <div class="item">
             <img src="img/night-road.jpg" alt="road">
             <div class="carousel-caption">
-            </div>
-          </div>
-        </div> <!--end wrapper-->
+            </div> <!--end carousel-caption-->
+          </div> <!--end item active-->
+        </div> <!--carousel-inner-->
 
         <!-- Controls -->
         <a class="left carousel-control" href="#carousel-index" role="button" data-slide="prev">
@@ -96,36 +96,35 @@
         </a>
 
         <h1>Emily Chadwick</h1>
-        <!--<h4>I am a Seattle based software developer.<br>
-        I am also an excellent baker, and can quote the West Wing line for line.</h4>-->
 
-      </div>
-
-        <!--<div class="container">-->
+      </div> <!--end carousel index-->
     </div><!-- /container-fluid -->
 
     <div class="container">
-      <!-- Example row of columns -->
+
       <div class="row-index">
         <div class="col-xs-12 col-s-6 col-md-4 col-lg-4 portfolio">
           <div class="intro-home">
           <h2>Portfolio Concept</h2>
             <p>I currently work as a non-profit manager, doing a little bit of everything, including the design and basic build out of web pages and communications. My portfolio will primarily focus on new work, as development is a whole new ballgame.</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
             </div><!--intro-home-->
         </div><!-- /col -->
+
         <div class="col-xs-12 col-s-6 col-md-4 col-lg-4 project-goals">
           <div class="intro-home">
           <h2>Project Goals</h2>
             <p>Though my expected graduation date is May 19, 2017 - my goal is to finish this course no later than May 1, almost three weeks ahead of schedule. As I work full-time, I plan to commit 20 - 25 hours per week to studying.</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-            </div><!--intro-home-->
+            <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
+            </div> <!--intro-home-->
         </div><!-- /col -->
+
         <div class="col-xs-12 col-s-6 col-md-4 col-lg-4 course-goals">
           <div class="intro-home">
           <h2>Course Goals</h2>
           <p>I am using this course so that I can change careers. Seattle is a huge tech hub, and I want in on the fun! After this course, my goal is to be hired as a junior developer, preferrably front-end. Eventually, I'd like to be able to freelance.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
+
           </div><!--intro-home-->
         </div><!-- /col -->
       </div><!-- /row -->
@@ -135,54 +134,18 @@
 
     <div class="container-fluid container-work anchor" id="portfolio">
       <h1>Work</h1>
-      <div class="row" id="work">
+      <div class="work-row" id="work">
 
-        <div class="col-xs-12 col-s-6 col-md-3 col-lg-4">
+        <div class="col-xs-12 col-s-6 col-md-6 col-lg-6">
           <div class="col-grid">
-            <img src="img/kale.jpg" class="img-work img-responsive">
-            For now, this is sample text.
-          </div><!--col-grid-->
-        </div><!--col-xs-12-->
-        <div class="col-xs-12 col-s-6 col-md-3 col-lg-4">
-          <div class="col-grid">
-            <img src="img/man-book.jpg" class="img-work img-responsive">
-            For now, this is sample text.
-          </div><!--end col-grid-->
-        </div><!-- col-xs-12-->
-        <div class="col-xs-12 col-s-6 col-md-3 col-lg-4">
-          <div class="col-grid">
-            <img src="img/notepad-table.jpg" class="img-work img-responsive">
-            For now, this is sample text.
+            <img src="img/calculator.jpg" class="img-work img-responsive">
+            <br>I created this calculator using HTML and CSS. Divs are used to house the numbers and CSS tools help visually guide the user of this tool. For now, this a non-functioning calculator (though try hovering over the numbers!). As my skills grow, I plan to use JavaScript to turn this into a functioning tool. This project took me approximately 1.5 hours.
           </div><!--end col-grid-->
         </div><!--end col-xs-12 etc-->
-        <div class="col-xs-12 col-s-6 col-md-3 col-lg-4">
+        <div class="col-xs-12 col-s-6 col-md-6 col-lg-6">
           <div class="col-grid">
-            <img src="img/camera.jpg" class="img-work img-responsive">
-            For now, this is sample text.
-          </div><!--end col-grid-->
-        </div><!--col-xs-12 etc-->
-        <div class="col-xs-12 col-s-6 col-md-3 col-lg-4">
-          <div class="col-grid">
-            <img src="img/computer.jpg" class="img-work img-responsive">
-            For now, this is sample text.
-          </div><!--end col-grid-->
-        </div><!--end col-xs-12 etc-->
-        <div class="col-xs-12 col-s-6 col-md-3 col-lg-4">
-          <div class="col-grid">
-            <img src="img/headphones.jpg" class="img-work img-responsive">
-            For now, this is sample text.
-          </div><!--end col-grid-->
-        </div><!--end col-xs-12 etc-->
-        <div class="col-xs-12 col-s-6 col-md-3 col-lg-4">
-          <div class="col-grid">
-            <img src="img/woman-wallet.jpg" class="img-work img-responsive">
-            For now, this is sample text.
-          </div><!--end col-grid-->
-        </div><!--end col-xs-12 etc-->
-        <div class="col-xs-12 col-s-6 col-md-3 col-lg-4">
-          <div class="col-grid">
-            <img src="img/coffee-carafe.jpg" class="img-work img-responsive">
-            For now, this is sample text.
+            <img src="img/homepage.jpg" class="img-work img-responsive">
+            <br>This site was created using primarily HTML, CSS, and Twitter Bootstrap. There are some links to JavaScript into which I will further dive in later lessons. This site took approximately two weeks to build out from start to finish (including time spent learning all of these new skills), but will continue to grow as I do.
           </div><!--end col-grid-->
         </div><!--end col-xs-12 etc-->
       </div><!--end row -->
@@ -205,9 +168,9 @@
       <div class="container-fluid main-text">
         <!--<h3>Still Interested?</h3>-->
 
-          <p>I currently work in field known as association management, which is management for non-profit organizations. As a manager, I approve website designs, email templates, plan events, and more. While I enjoy the work that I do, there was a small, but nagging voice in the back of my head telling me that I didn't just need to approve websites, but that I could create them! I didn't need to make content for emails and newsletters, I could code how they looked. So, I decided to take the leap.<br><br>
+        <p>I currently work in field known as association management, which is management for non-profit organizations. As a manager, I approve website designs, email templates, plan events, and more. While I enjoy the work that I do, there was a small, but nagging voice in the back of my head telling me that I didn't just need to approve websites, but that I could create them! I didn't need to make content for emails and newsletters, I could code how they looked. So, I decided to take the leap.<br><br>
 
-          When not at work, or studying for my new career, I like to stay active! Living in Seattle brings all sorts of perks, including great hiking and biking trails, an easily accesible coast, and great craft ciders. I'm also an avid (and excellent) baker, love old-school hip-hop, and can quote the West Wing from start to finish.</p>
+        When not at work, or studying for my new career, I like to stay active! Living in Seattle brings all sorts of perks, including great hiking and biking trails, an easily accesible coast, and great craft ciders. I'm also an avid (and excellent) baker, love old-school hip-hop, and can quote the West Wing from start to finish.</p>
 
       </div><!--end main-text-->
 
@@ -231,21 +194,20 @@
         </div><!--end skills-->
       </div><!--end row-about-->
 
-        <div class="row-about">
-          <div class="intro-about col-xs-12 col-s-6 col-md-6 col-lg-6">
-            <div class="about-col">
-              <h2>I still want to learn:</h2>
-              <ul id="learn-list" style="list-style:none">
-                <li>JavaScript</li>
-                <li>Ruby on Rails</li>
-                <li>Angular</li>
-                <li>React</li>
-                <li>More about Git and GitHub</li>
-                <li>Anything else that will help me succeed!</li>
-              </ul><!--end learn-list-->
-            </div><!--end about col-->
-          </div> <!--end intro-->
-        </div> <!--end row-about-->
+      <div class="intro-about col-xs-12 col-s-6 col-md-6 col-lg-6">
+        <div class="about-col">
+          <h2>I still want to learn:</h2>
+          <ul id="learn-list" style="list-style:none">
+            <li>JavaScript</li>
+            <li>Ruby on Rails</li>
+            <li>Angular</li>
+            <li>React</li>
+            <li>Ember</li>
+            <li>More about Git and GitHub</li>
+            <li>Anything else that will help me succeed!</li>
+          </ul><!--end learn-list-->
+        </div><!--end about col-->
+      </div> <!--end intro-->
 
     </div><!--end container-fluid-->
 
@@ -260,7 +222,6 @@
       </div> <!--end main faq-->
 
       <div class="panel-group" id="accordion">
-
         <div class="panel panel-default">
 
           <div class="panel-heading">
@@ -363,26 +324,7 @@
         </div>
       </div><!--contact-image-->
 
-      <!--<div class="main-contact">
-        <div class="row-contact">
-          <div class="together-contact col-xs-12 col-s-6 col-md-6 col-lg-6">
-            <div class="contact-column">
-              <h2>Why Work Together?</h2>
-                <p>As an individual new to the world of web development, I see opportunities for improvement where others may not. While I'm not an expert in the field, I have a drive to learn, an excitement for success, and a great attitude. Let's chat about opportunities for web developer jobs or freelance work.</p>
-            </div>--> <!--contact-column-->
-          <!--</div>--><!-- /col -->
-
-          <!--<div class="connect-contact col-xs-12 col-s-6 col-md-6 col-lg-6">
-            <div class="contact-column">
-              <h2>Connect</h2>
-                <span class="glyphicon glyphicon-envelope"></span> emilyann.chadwick@gmail.com<br>
-                <p><span class="glyphicon glyphicon-phone-alt"></span> (206) 359-5393</p>
-                <span class="glyphicon glyphicon-map-marker"></span> Seattle, WA<br>
-            </div> --><!--contact-column-->
-          <!--</div>--><!-- /col -->
-        <!--</div>--><!--row-contact -->
-      <!--</div>--><!--end main-contact-->
-    <!--</div>--><!--container-fluid-->
+    </div>  <!--end container-fluid-->
 
     <!--end contact-->
 
